https://jira.fingo.info/browse/PRAK-28 Create holidays configuration view

--- a/view.react/src/global-styles/AbsenceHistoryList.module.scss
+++ b/view.react/src/global-styles/AbsenceHistoryList.module.scss
@@ -1,4 +1,4 @@
-@import "src/global-styles/color-variables.scss";
+@import "src/global-styles/color-variables";
 
 .dropItem {
     text-align: center;
