--- a/view.react/src/global-styles/color-variables.scss
+++ b/view.react/src/global-styles/color-variables.scss
@@ -10,3 +10,9 @@ $WHITESMOKE_COLOR: #fafafa;
 $PURPLE_COLOR: #c474e4;
 $LOGIN_BACK_COLOR: linear-gradient(to right, #f64f59, #c471ed, #12c2e9);
 $CALENDAR-BORDER-COLOR: #cccccc;
+$REJECT-COLOR: red;
+$REJECT-HOVER-COLOR: darkred;
+$ADDITION-COLOR: rgb(79, 222, 35);
+$ADDITION-HOVER-COLOR: darkgreen;
+$DEFAULT-COLOR: orange;
+$DEFAULT-HOVER-COLOR: orangered;
