https://jira.fingo.info/browse/PRAK-102 Create dashboard calendar

--- a/view.react/src/global-styles/color-variables.scss
+++ b/view.react/src/global-styles/color-variables.scss
@@ -10,6 +10,7 @@ $WHITESMOKE_COLOR: #fafafa;
 $PURPLE_COLOR: #c474e4;
 $LOGIN_BACK_COLOR: linear-gradient(to right, #f64f59, #c471ed, #12c2e9);
 $CALENDAR-BORDER-COLOR: #cccccc;
+$CALENDAR-HOVER-COLOR: #95daff;
 $REJECT-COLOR: red;
 $REJECT-HOVER-COLOR: darkred;
 $ADDITION-COLOR: rgb(79, 222, 35);
