https://jira.fingo.info/browse/PRAK-130 Add available vacation days information to menu

--- a/view.react/src/components/sidebar/Sidebar.module.scss
+++ b/view.react/src/components/sidebar/Sidebar.module.scss
@@ -35,6 +35,15 @@
   }
 }
 
+.days {
+  font-size: 0.9rem;
+  color: $GREY-COLOR;
+
+  p {
+    margin: 0;
+  }
+}
+
 .overlay {
   z-index: 5;
   position: fixed;
