--- a/view.react/src/global-styles/color-variables.scss
+++ b/view.react/src/global-styles/color-variables.scss
@@ -17,3 +17,4 @@ $ADDITION-COLOR: rgb(79, 222, 35);
 $ADDITION-HOVER-COLOR: darkgreen;
 $DEFAULT-COLOR: orange;
 $DEFAULT-HOVER-COLOR: orangered;
+$BLACK-COLOR: black;
