https://jira.fingo.info/browse/PRAK-136 Add no action information (icon) on workers list

--- a/view.react/src/components/workers-table/WorkersTable.module.scss
+++ b/view.react/src/components/workers-table/WorkersTable.module.scss
@@ -5,3 +5,14 @@
 .unspecifiedUsersAlert {
   font-size: 0.875rem;
 }
+
+.notify {
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+.dot {
+  position: absolute;
+  left: 0;
+}
