https://jira.fingo.info/browse/PRAK-150  Add endpoint for generating .zip with evidence reports

--- a/view.react/src/components/reports/MonthPicker/MonthPicker.module.scss
+++ b/view.react/src/components/reports/MonthPicker/MonthPicker.module.scss
@@ -2,7 +2,7 @@
 @import "src/global-styles/color-variables";
 
 .btnClass {
-  background-color: $GREY-COLOR;
+  background-color: $LIGHTGREY-COLOR;
   color: $BLACK-COLOR;
   width: 100%;
 }
