--- a/view.react/src/global-styles/color-variables.scss
+++ b/view.react/src/global-styles/color-variables.scss
@@ -11,6 +11,8 @@ $PURPLE_COLOR: #c474e4;
 $LOGIN_BACK_COLOR: linear-gradient(to right, #f64f59, #c471ed, #12c2e9);
 $CALENDAR-BORDER-COLOR: #cccccc;
 $CALENDAR-HOVER-COLOR: #95daff;
+$CALENDAR-NUMBER-BLACK-COLOR: #1d2429;
+$CALENDAR-CURRENT-DAY-INDICATOR-COLOR: #3d91ff;
 $REJECT-COLOR: red;
 $REJECT-HOVER-COLOR: darkred;
 $ADDITION-COLOR: rgb(79, 222, 35);
