https://jira.fingo.info/browse/PRAK-213 Add AppInfo context and build version info to LoginPage and Sidebar

--- a/view.react/src/components/sidebar/Sidebar.module.scss
+++ b/view.react/src/components/sidebar/Sidebar.module.scss
@@ -53,6 +53,12 @@
   cursor: pointer;
 }
 
+.versionContainer {
+  font-size: 0.9rem;
+  color: $GREY-COLOR;
+  margin-top: auto;
+}
+
 @include media-breakpoint-up(lg) {
   .main {
     max-width: 25%;
