https://jira.fingo.info/browse/PRAK-203 Fix arrow from sorting

--- a/view.react/src/global-styles/index.scss
+++ b/view.react/src/global-styles/index.scss
@@ -5,6 +5,7 @@
 @import '~react-bootstrap-table-next/dist/react-bootstrap-table2.min.css';
 @import './bootstrap-4-compatibility.scss';
 @import '~react-notifications-component/dist/theme.css';
+@import 'src/global-styles/react-table-styles.module.scss';
 
 html, body {
   width: 100%;
