--- a/view.react/src/components/sidebar/Sidebar.module.scss
+++ b/view.react/src/components/sidebar/Sidebar.module.scss
@@ -22,7 +22,7 @@
   flex-direction: column;
   flex-wrap: nowrap;
   background-color: white;
-  padding: 5rem 2rem;
+  padding: 4rem 2rem;
   height: 100%;
   max-height: 100%;
 
@@ -36,9 +36,9 @@
 }
 
 .days {
-  font-size: 0.9rem;
-  color: $GREY-COLOR;
-
+  font-size: 1.6rem;
+  color: $BLACK-COLOR;
+  padding: 2rem 0 0 2rem;
   p {
     margin: 0;
   }
