https://jira.fingo.info/browse/PRAK-174 Highlight holidays that are on Saturday

--- a/view.react/src/components/holidays-config/HolidaysConfigTab.module.scss
+++ b/view.react/src/components/holidays-config/HolidaysConfigTab.module.scss
@@ -29,3 +29,14 @@
     color: $REJECT-HOVER-COLOR;
   }
 }
+
+.notify {
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+.dot {
+  position: absolute;
+  left: 0;
+}
