https://jira.fingo.info/browse/PRAK-190 In presence confirmation section add information about absence

--- a/view.react/src/components/sidebar/Sidebar.module.scss
+++ b/view.react/src/components/sidebar/Sidebar.module.scss
@@ -56,7 +56,8 @@
 .versionContainer {
   font-size: 0.9rem;
   color: #cccccc;
-  margin-top: auto;
+  position: absolute;
+  bottom: 10%;
 }
 
 @include media-breakpoint-up(lg) {
