--- a/view.react/src/components/topbar/TopBar.module.scss
+++ b/view.react/src/components/topbar/TopBar.module.scss
@@ -27,6 +27,20 @@
   outline: none;
 }
 
+.settingsButton {
+  border: none;
+  background-color: inherit;
+  outline: none;
+}
+
+.settingsIcon {
+  color: $WHITESMOKE_COLOR;
+
+  &:hover {
+    color: $HOVER-COLOR;
+  }
+}
+
 .icon {
   color: white;
   font-size: 1.5rem;
