--- a/view.react/src/components/sidebar/Sidebar.module.scss
+++ b/view.react/src/components/sidebar/Sidebar.module.scss
@@ -3,7 +3,7 @@
 
 .main {
   z-index: 6;
-  font-size: 1.25rem;
+  font-size: 1.2rem;
   padding: 0;
   position: fixed;
   height: 100%;
@@ -22,9 +22,9 @@
   flex-direction: column;
   flex-wrap: nowrap;
   background-color: white;
-  padding: 4rem 2rem;
-  height: 100%;
-  max-height: 100%;
+  padding: 2rem;
+  height: 70%;
+  width: 105%;
 
   a {
     text-decoration: none;
@@ -36,6 +36,8 @@
 }
 
 .days {
+  background-color: white;
+  width: 105%;
   font-size: 1.6rem;
   color: $BLACK-COLOR;
   padding: 2rem 0 0 2rem;
