https://jira.fingo.info/browse/IJ-252 Fix mail rejecting a vacation request by @.

--- a/src/main/resources/mails/normal/acceptance_created_leader_pl.hbs
+++ b/src/main/resources/mails/normal/acceptance_created_leader_pl.hbs
@@ -9,4 +9,7 @@ Dzień dobry,
 Żeby zaakceptować wniosek kliknij link {{app-url}}
 lub odpowiedz "OK" na tę wiadomość.
 
+Żeby odrzucić wniosek kliknij link {{app-url}}
+lub odpowiedz "NIE" na tę wiadomość.
+
 {{>footer_pl}}
