https://jira.fingo.info/browse/IJ-318 Prepare frontend for no-auth - hide all components in App

--- a/view.react/src/components/main/Main.module.scss
+++ b/view.react/src/components/main/Main.module.scss
@@ -1,4 +1,4 @@
-@import '../../global-styles/bootstrap-breakpoints';
+@import 'src/global-styles/bootstrap-breakpoints';
 
 @include media-breakpoint-up(lg) {
   .mainContent {
