--- a/view.react/src/components/dashboard-calendar/DashboardCalendar.module.scss
+++ b/view.react/src/components/dashboard-calendar/DashboardCalendar.module.scss
@@ -1,61 +1,176 @@
 @import '../../global-styles/bootstrap-breakpoints';
 @import '../../global-styles/color-variables';
+@import url('https://fonts.cdnfonts.com/css/poppins');
 
 .calendarWrapper {
-  display: flex;
-  justify-content: center;
   margin-bottom: 1rem;
 }
 
 .calendar {
   overflow: auto;
-  border: 1px solid $CALENDAR-BORDER-COLOR;
   font-size: 1.125rem;
+  position: relative;
+  font-family: 'Poppins', sans-serif;
 
   :global {
-    .rdrDay {
-      border: 1px solid $CALENDAR-BORDER-COLOR;
+    .rdrDays{
+      row-gap: 8px;
+      column-gap: 8px;
 
-      .rdrDayNumber {
-        color: transparent;
-      }
+      .rdrDay {
+        width: calc((100% - 48px) / 7 );
+        border-radius: 4px;
+        border: 1px solid transparent;
+        
+        .rdrDayNumber {
+          color: transparent;
 
-      .rdrSelected {
-        border-radius: 0;
-        left: 0;
-        top: 0;
-        width: 101%;
-        height: 101%;
-      }
-
-      .rdrSelected + .rdrDayNumber {
-        color: transparent;
-      }
-
-      &:hover {
-        background-color: $CALENDAR-HOVER-COLOR;
-      }
-
-      &:not(.rdrDayPassive) {
-        .rdrSelected ~ .rdrDayNumber {
           span {
-            color: $CALENDAR-NUMBER-BLACK-COLOR;
+            font-size: 16px;
+          }
+        }
+  
+        .rdrSelected {
+          border-radius: 0;
+          left: 0;
+          top: 0;
+          width: 101%;
+          height: 101%;
+        }
+  
+        .rdrSelected + .rdrDayNumber {
+          color: transparent;
+        }
+  
+        &:hover {
+          border: 1px solid #78A612;
+          transition: all 0.6s ease-in-out;
+        }
+  
+        &:not(.rdrDayPassive) {
+          .rdrSelected ~ .rdrDayNumber {
+            span {
+              color: $CALENDAR-NUMBER-BLACK-COLOR;
+            }
+          }
+        }
+      }
+
+      .rdrDay.rdrDayToday {
+        background-color: #002900;
+        
+        .rdrDayNumber {
+          span {
+            color: #fff;
+
+            &:after {
+              content: unset;
+            }
           }
         }
       }
     }
+
+    .rdrDay:not(.rdrDayDisabled, .rdrDayPassive) {
+      .rdrDayNumber {
+        span {
+          color: #002900;
+
+          strong {
+            font-size: 12px;
+          }
+        }
+      }
+    }
+
+    .rdrWeekDays {
+      column-gap: 8px;
+    }
+
+    .rdrWeekDay {
+      color: #002900;
+      font-size: 14px;
+    }
+
+    .rdrMonths {
+      overflow: hidden;
+
+      .rdrMonth {
+        padding: 0;
+
+        &:first-child {
+          margin-right: 56px;
+        }
+
+        .rdrMonthName {
+          text-align: center;
+          text-transform: capitalize;
+          font-size: 20px;
+          font-weight: 400;
+          color: #002900;
+        }
+      }
+    }
+
+    .rdrMonthAndYearWrapper {
+      position: absolute;
+      display: flex;
+      width: 100%;
+
+      .rdrNextPrevButton {
+        background-color: unset;
+
+        i {
+          border: solid #002900;
+          border-width: 0 3px 3px 0;
+          display: inline-block;
+          padding: 5px;
+
+          &:hover {
+            display: inline-block;
+            border-width: 0 3px 3px 0;
+            border-color: #78A612;
+            padding: 6px;
+          }
+        }
+      }
+
+      .rdrMonthAndYearPickers {
+        display: none;
+      }
+
+      .rdrPprevButton {
+        transform: rotate(135deg);
+      }
+
+      .rdrNextButton {
+        transform: rotate(-45deg);
+      }
+    }
   }
+}
+
+.rdrNextPrevButton {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto 0;
+}
+
+.rdrWeekDays {
+  column-gap: 8;
+}
+
+.rdrDays {
+  display: grid;
 }
 
 .mainNumber {
   position: absolute;
   bottom: 0.3rem;
   left: 0.5rem;
-
-  &::after {
-    bottom: 1rem !important;
-    background: $CALENDAR-CURRENT-DAY-INDICATOR-COLOR !important;
-  }
+  width: 22px;
 }
 
 .absentUsersLabel {
@@ -68,18 +183,27 @@
 }
 
 .exclamationIcon,
-.absenceIcon {
-  color: red;
-  font-size: 0.9rem;
-  position: absolute;
-  top: 0.2rem;
-  right: 0.5rem;
+  .absenceIcon {
+    color: #ECA725;
+    font-size: 0.9rem;
+    position: absolute;
+    top: 0.2rem;
+    right: 0.5rem;
 }
 
 .absenceIcon {
-  color: green;
+  color: #78A612;
   font-size: 0.8rem;
   top: 0.3rem;
+}
+
+.filterTitle {
+  font-size: 34px;
+  line-height: 56px;
+  font-family: 'Poppins', sans-serif;
+  color: #002900;
+  font-weight: 600;
+  letter-spacing: 0.01px;
 }
 
 .filterSection {
@@ -110,11 +234,19 @@
 @include media-breakpoint-up(md) {
   .filterSection {
     flex-direction: row;
-    justify-content: space-between;
   }
 
   .filter {
-    width: 45%;
+    width: 348px;
+    margin-right: 56px;
+
+    input {
+      outline-color: #719ECE;
+    }
+
+    span {
+      display: none;
+    }
   }
 
   .filter + .filter {
