--- a/view.react/src/components/topbar/team-dropdown/TeamDropdown.module.scss
+++ b/view.react/src/components/topbar/team-dropdown/TeamDropdown.module.scss
@@ -5,16 +5,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-decoration: none;
 
   p {
-    color: white;
+    color: #002900;
     border: none;
-    text-decoration: underline $BASE-COLOR;
+    text-decoration: none;
     margin: 0;
+    font-weight: 600;
+    font-size: 23px;
   }
 
   &:hover * {
-    color: $HOVER-COLOR;
+    color: #78a612;
   }
 }
 
@@ -45,12 +48,12 @@
 }
 
 .icon {
-  color: white;
-  font-size: 1.5rem;
+  color: #002900;
+  font-size: 2.5rem;
   margin: 0 0.5rem;
   padding: 0;
 
   &:hover {
-    color: $HOVER-COLOR;
+    color: #78a612;;
   }
 }
