--- a/view.react/src/components/sidebar/Sidebar.module.scss
+++ b/view.react/src/components/sidebar/Sidebar.module.scss
@@ -57,7 +57,7 @@
       }
     }
 
-  &--clicked {
+  &--open {
     button {
       position: relative;
       transform: translateX(450%) rotate(-180deg);
@@ -152,7 +152,8 @@
   font-size: 0.9rem;
   color: #cccccc;
   position: absolute;
-  bottom: 10%;
+  bottom: 1%;
+  left: 1%;
 }
 
 @include media-breakpoint-up(lg) {
