--- a/view.react/src/global-styles/color-variables.scss
+++ b/view.react/src/global-styles/color-variables.scss
@@ -1,7 +1,7 @@
-$BASE-COLOR: deepskyblue;
-$BACK-COLOR: #36c9ff;
-$HOVER-COLOR: #0086bb;
-$ACTIVE-COLOR: #005e83;
+$BASE-COLOR: #78A612;
+$BACK-COLOR: #8fc414;
+$HOVER-COLOR: #354d07;
+$ACTIVE-COLOR: #002900;
 $LINK-COLOR: rgba(255, 255, 255, 0.5);
 $GREY-COLOR: #989898;
 $LIGHTGREY-COLOR: #efefef;
@@ -10,9 +10,9 @@ $WHITESMOKE_COLOR: #fafafa;
 $PURPLE_COLOR: #c474e4;
 $LOGIN_BACK_COLOR: linear-gradient(to right, #f64f59, #c471ed, #12c2e9);
 $CALENDAR-BORDER-COLOR: #cccccc;
-$CALENDAR-HOVER-COLOR: #95daff;
+$CALENDAR-HOVER-COLOR: #8fc414;
 $CALENDAR-NUMBER-BLACK-COLOR: #1d2429;
-$CALENDAR-CURRENT-DAY-INDICATOR-COLOR: #3d91ff;
+$CALENDAR-CURRENT-DAY-INDICATOR-COLOR: #78A612;
 $REJECT-COLOR: red;
 $REJECT-HOVER-COLOR: darkred;
 $ADDITION-COLOR: rgb(79, 222, 35);
