--- a/view.react/src/components/sidebar/Sidebar.module.scss
+++ b/view.react/src/components/sidebar/Sidebar.module.scss
@@ -4,13 +4,12 @@
 .main {
   z-index: 6;
   font-size: 1.2rem;
-  padding: 0;
-  position: fixed;
+  padding: 35px 20px 0 0;
   height: 100%;
   width: fit-content;
   max-height: 100%;
 
-  a { 
+  a {
     color: $GREY-COLOR;
     padding-bottom: 12px;
     margin-top: 18px;
@@ -18,14 +17,13 @@
 }
 
 .nav {
-    position: absolute;
-    top: 6rem;
-    left: 0;
+    flex-direction: column;
     white-space: nowrap;
     text-transform: uppercase;
     margin-left: 2rem;
 
     button {
+      width: fit-content;
       background-color: transparent;
       border: none;
       position: relative;
@@ -60,7 +58,7 @@
   &--open {
     button {
       position: relative;
-      transform: translateX(450%) rotate(-180deg);
+      transform: translateX(435%) rotate(-180deg);
       transition: transform 0.3s ease-in-out;
     }
 
@@ -133,7 +131,7 @@
   font-size: 1.6rem;
   color: $BLACK-COLOR;
   padding: 2rem 0 0 2rem;
-  
+
   p {
     margin: 0;
   }
@@ -151,19 +149,15 @@
 .versionContainer {
   font-size: 0.9rem;
   color: #cccccc;
-  position: absolute;
+  position: fixed;
   bottom: 1%;
   left: 1%;
+  z-idnex: 7;
 }
 
 @include media-breakpoint-up(lg) {
   .main {
     max-width: 25%;
-    padding-right: 0;
     background-color: white;
-  }
-
-  .nav {
-    padding-right: 0;
   }
 }
